# url-shortener

./: .pre-commit-config.yaml  README.org  alembic.ini  pyproject.toml  setup.cfg
src/application/cfg/: settings.py
src/application/users/: new_user.py  user.py
src/infrastructure/cfg/: toml.py
src/infrastructure/db/migrations/: env.py
src/tests/unit/cfg/: test.config.toml  test_toml_settings.py
