[project]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = [
    {name = "rafayt323@gmail.com",email = "rafayt323@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi[standart] (>=0.115.12,<0.116.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.9"
wemake-python-styleguide = "^1.1.0"
eo-styleguide = "^0.0.1a16"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"


[tool.pytest.ini_options]
addopts = "--cov=src"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
